--- a/committee.html
+++ b/committee.html
@@ -22,7 +22,7 @@
     <li><a href="about.html">About</a></li>
     
     <li>
-        <a href="committee.html" class="dropbtn">Committee</a>
+        <a href="committee.html" class="dropbtn active">Committee</a>
         <ul class="dropdown-content">
             <li><a href="committee.html">Organizing Committee</a></li>
             <li><a href="committee.html#steering">Steering Committee</a></li>
@@ -31,7 +31,7 @@
     </li>
 
     <li>
-        <a href="cfp.html" class="dropbtn active">Call for Papers</a>
+        <a href="cfp.html" class="dropbtn">Call for Papers</a>
         <ul class="dropdown-content">
             <li><a href="cfp.html">Topics & Tracks</a></li>
             <li><a href="author-guidelines.html">Author Guidelines</a></li>
@@ -193,5 +193,6 @@
 <footer>© 2026 CVIP Conference. Organized by NIT Calicut & NTNU Norway.</footer>
 </body>
 </html>
+
 
 
