--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="slide" style="background-image: url('assets/images/slide3.jpg');"></div>
     
     <div class="hero-content">
-        <h2>11th International Conference on</h2>
+        <h2>11<sup>th</sup> International Conference on</h2>
         <h1>Computer Vision & Image Processing</h1>
         
         <p style="font-size: 1.2rem; margin: 15px 0;">December 9–12, 2026</p>
@@ -106,13 +106,14 @@
 <section class="section">
     <h2 class="section-title reveal-text">Welcome to CVIP 2026</h2>
     <div class="reveal-text" style="text-align: center; max-width: 900px; margin: 0 auto; font-size: 1.1rem;">
-        <p>The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners.</p>
+        <p>The <strong>11<sup>th</sup> International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners.</p>
         <br>
         <p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed).</p>
     </div>
 </section>
 
 <footer>
+
 
 
 
