Add superscript for '11th' in conference details

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <div style="width: 60px; height: 4px; background: var(--secondary-color); margin-bottom: 30px;"></div>
             
             <p style="text-align: justify; margin-bottom: 15px;">
-                The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> will be held from December 9–12, 2026, at the National Institute of Technology Calicut (NITC), India. This prestigious event is organized jointly by NIT Calicut and the Norwegian University of Science and Technology (NTNU), Norway.
+                The <strong>11<sup>th</sup> International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> will be held from December 9–12, 2026, at the National Institute of Technology Calicut (NITC), India. This prestigious event is organized jointly by NIT Calicut and the Norwegian University of Science and Technology (NTNU), Norway.
             </p>
         </div>
         <div class="reveal-text">
