--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="about.html" class="active">About</a></li>
+    <li><a href="about.html">About</a></li>
     
     <li>
         <a href="committee.html" class="dropbtn">Committee</a>
@@ -37,6 +37,8 @@
             <li><a href="author-guidelines.html">Author Guidelines</a></li>
         </ul>
     </li>
+
+    <li><a href="sponsorship.html">Sponsorship</a></li>
 
     <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
