Remove active class from Call for Papers link

--- a/cfp.html
+++ b/cfp.html
@@ -30,12 +30,14 @@
     </li>
 
     <li>
-        <a href="cfp.html" class="dropbtn active">Call for Papers</a>
+        <a href="cfp.html" class="dropbtn">Call for Papers</a>
         <ul class="dropdown-content">
             <li><a href="cfp.html">Topics & Tracks</a></li>
             <li><a href="author-guidelines.html">Author Guidelines</a></li>
         </ul>
     </li>
+
+    <li><a href="sponsorship.html">Sponsorship</a></li>
 
     <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
