--- a/committee.html
+++ b/committee.html
@@ -22,7 +22,7 @@
     <li><a href="about.html">About</a></li>
     
     <li>
-        <a href="committee.html" class="dropbtn active">Committee</a>
+        <a href="committee.html" class="dropbtn">Committee</a>
         <ul class="dropdown-content">
             <li><a href="committee.html">Organizing Committee</a></li>
             <li><a href="committee.html#steering">Steering Committee</a></li>
@@ -37,6 +37,8 @@
             <li><a href="author-guidelines.html">Author Guidelines</a></li>
         </ul>
     </li>
+
+    <li><a href="sponsorship.html">Sponsorship</a></li>
 
     <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
@@ -193,6 +195,7 @@
 <footer>© 2026 CVIP Conference. Organized by NIT Calicut & NTNU Norway.</footer>
 </body>
 </html>
+
 
 
 
