Add sponsorship link to important dates page

--- a/important-dates.html
+++ b/important-dates.html
@@ -38,8 +38,10 @@
         </ul>
     </li>
 
+    <li><a href="sponsorship.html">Sponsorship</a></li>
+
     <li><a href="venue.html">Venue</a></li>
-    <li><a href="important-dates.html" class="active">Dates</a></li>
+    <li><a href="important-dates.html">Dates</a></li>
     <li><a href="registration.html">Registration</a></li>
 
     <li>
