--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
 <ul class="nav-links">
-    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     
     <li>
@@ -38,6 +38,8 @@
             <li><a href="author-guidelines.html">Author Guidelines</a></li>
         </ul>
     </li>
+
+    <li><a href="sponsorship.html">Sponsorship</a></li>
 
     <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
@@ -113,6 +115,7 @@
 </section>
 
 <footer>
+
 
 
 
