--- a/registration.html
+++ b/registration.html
@@ -38,9 +38,11 @@
         </ul>
     </li>
 
+    <li><a href="sponsorship.html">Sponsorship</a></li>
+
     <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
-    <li><a href="registration.html" class="active">Registration</a></li>
+    <li><a href="registration.html">Registration</a></li>
 
     <li>
         <a href="#" class="dropbtn">Archive</a>
