--- a/venue.html
+++ b/venue.html
@@ -38,7 +38,9 @@
         </ul>
     </li>
 
-    <li><a href="venue.html" class="active">Venue</a></li>
+    <li><a href="sponsorship.html">Sponsorship</a></li>
+
+    <li><a href="venue.html">Venue</a></li>
     <li><a href="important-dates.html">Dates</a></li>
     <li><a href="registration.html">Registration</a></li>
 
