--- a/sponsorship.html
+++ b/sponsorship.html
@@ -77,7 +77,7 @@
 
 <section class="section" style="background: #f8f9fa;">
     <h2 class="section-title reveal-text">Sponsorship Tiers</h2>
-    <div class="dates-table-container reveal-text" style="max-width: 1000px;">
+    <div class="dates-table-container reveal-text" style="max-width: 1200px; overflow-x: auto;">
         <table class="dates-table">
             <thead>
                 <tr>
@@ -85,45 +85,80 @@
                     <th>Fund (₹) [excl. GST]</th>
                     <th>Complimentary Pass</th>
                     <th>Table/Stall</th>
-                    <th>Branding (Website/Brochure)</th>
+                    <th>Website/ Branding</th>
+                    <th>Brochure Branding</th>
+                    <th>Participation in Industry Session</th>
+                    <th>Branding During Breaks</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td style="font-weight: 700; color: var(--primary-color);">Diamond</td>
-                    <td>5,00,000</td>
-                    <td>10</td>
-                    <td>2 Stalls</td>
-                    <td>Yes (Prime)</td>
+                    <td style="font-weight: 700; color: var(--primary-color);">Platinum</td>
+                    <td>7 Lacs</td>
+                    <td>7</td>
+                    <td>Stall</td>
+                    <td>Yes</td>
+                    <td>Yes</td>
+                    <td>Yes</td>
+                    <td>Yes</td>
                 </tr>
                 <tr>
-                    <td style="font-weight: 700; color: var(--primary-color);">Platinum</td>
-                    <td>3,00,000</td>
-                    <td>5</td>
-                    <td>1 Stall</td>
+                    <td style="font-weight: 700; color: var(--primary-color);">Diamond</td>
+                    <td>5 Lacs</td>
+                    <td>4</td>
+                    <td>Stall</td>
                     <td>Yes</td>
+                    <td>Yes</td>
+                    <td>Yes</td>
+                    <td>No</td>
                 </tr>
                 <tr>
                     <td style="font-weight: 700; color: var(--primary-color);">Gold</td>
-                    <td>2,00,000</td>
+                    <td>3 Lacs</td>
                     <td>3</td>
-                    <td>1 Stall</td>
+                    <td>Table</td>
                     <td>Yes</td>
+                    <td>Yes</td>
+                    <td>Yes</td>
+                    <td>No</td>
                 </tr>
                 <tr>
                     <td style="font-weight: 700; color: var(--primary-color);">Silver</td>
-                    <td>1,00,000</td>
+                    <td>1.5 Lacs</td>
                     <td>2</td>
-                    <td>Shared Space</td>
+                    <td>Table</td>
                     <td>Yes</td>
+                    <td>No</td>
+                    <td>No</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td style="font-weight: 700; color: var(--primary-color);">Bronze</td>
+                    <td>75 K</td>
+                    <td>1</td>
+                    <td>No</td>
+                    <td>Yes</td>
+                    <td>No</td>
+                    <td>No</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td style="font-weight: 700; color: var(--primary-color);">Awards and Session Sponsorship</td>
+                    <td>Discussion with organizers</td>
+                    <td>1</td>
+                    <td>No</td>
+                    <td>Yes</td>
+                    <td>No</td>
+                    <td>No</td>
+                    <td>No</td>
                 </tr>
             </tbody>
         </table>
     </div>
     
     <div class="reveal-text" style="text-align: center; margin-top: 40px;">
-        <p style="margin-bottom: 20px;">CVIP 2026 attracts decision-makers looking for the next generation of products, solutions, and advanced industry perspectives.</p>
-        <a href="mailto:cvip2026@nitc.ac.in" class="btn">Contact Us to Sponsor</a>
+        <p style="margin-bottom: 20px;">CVIP 2026 attracts decision-makers looking for the next generation of products, solutions, and advanced industry perspectives. Put yourself in the position to meet them by supporting CVIP 2026!</p>
+        <a href="mailto:cvip2026@nitc.ac.in" class="btn">Secure Your Sponsorship Today</a>
     </div>
 </section>
 
