--- a/sponsorship.html
+++ b/sponsorship.html
@@ -57,7 +57,7 @@
     </ul>
 </nav>
 
-<div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
+<div class="marquee"><div class="marquee-content">📢 Paper submission opens on 26 January 2026! &nbsp;&bull;&nbsp; 📅 Conference Dates: Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 
 <div class="page-hero"><h1>Sponsorship & Exhibitor Opportunities</h1></div>
 
