--- a/important-dates.html
+++ b/important-dates.html
@@ -93,21 +93,18 @@
                     <td>15 July 2026</td>
                 </tr>
 
-                <tr>
-                    <td>Round 2 Paper Submission Opens</td>
-                    <td>--</td>
-                </tr>
+
                  <tr>
                     <td>Round 2 Paper Submission Deadline</td>
-                    <td>--</td>
+                    <td>31 July 2026</td>
                 </tr>
                 <tr>
                     <td>Round 2 Acceptance Notification</td>
-                    <td>--</td>
+                    <td>31 September 2026</td>
                 </tr>
                 <tr>
                     <td>Round 2 Camera Ready Submission</td>
-                    <td>--</td>
+                    <td>23 October 2026</td>
                 </tr>
 
                 <tr>
