--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <section class="section" style="padding-top: 40px; padding-bottom: 40px;">
     <div class="theme-visual-container reveal-text">
         <div class="theme-box" style="max-width: 600px; width: 90%;">Theme: Vision for Humanity</div>
-        <img src="assets/images/vision.jpg" alt="Vision for Humanity" class="theme-image" style="max-width: 600px; width: 90%; margin: 0 auto;">
+        <img src="assets/images/vision.png" alt="Vision for Humanity" class="theme-image" style="max-width: 600px; width: 90%; margin: 0 auto;">
     </div>
 </section>
 
@@ -130,3 +130,4 @@
 </footer>
 </body>
 </html>
+
