--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
 <nav class="navbar">
-    <div class="logo">CVIP 2026</div>
+    <div class="logo">
+        <img src="assets/images/nitc.svg" alt="NITC Logo" class="nav-logo-img">
+        CVIP 2026
+    </div>
 
     <div class="mobile-menu-toggle">
         <span></span>
@@ -82,7 +85,7 @@
 <section class="section" style="padding-top: 40px; padding-bottom: 40px;">
     <div class="theme-visual-container reveal-text">
         <div class="theme-box" style="max-width: 600px; width: 90%;">Theme: Vision for Humanity</div>
-        <img src="assets/images/vision.png" alt="Vision for Humanity" class="theme-image" style="max-width: 600px; width: 90%; margin: 0 auto;">
+        <img src="assets/images/vision.jpg" alt="Vision for Humanity" class="theme-image" style="max-width: 600px; width: 90%; margin: 0 auto;">
     </div>
 </section>
 
@@ -130,4 +133,3 @@
 </footer>
 </body>
 </html>
-
