--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
     </div>
 </section>
 
+<section class="section acknowledgment-section" style="background: #eef2f5;">
+    <div class="submission-card reveal-text">
+        <h2 class="section-title" style="margin-bottom: 30px;">Instruction for Manuscript Submission</h2>
+        <p style="text-align: center;">
+            The manuscript has to be uploaded online at the CVIP 2026 Microsoft Research paper submission portal at the following link:
+        </p>
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="https://cmt3.research.microsoft.com/CVIP2026" class="btn btn-portal" target="_blank">Go to CMT Portal (CVIP 2026)</a>
+        </div>
+    </div>
+</section>
+
 <section class="section">
     <h2 class="section-title reveal-text">Welcome to CVIP 2026</h2>
     <div class="reveal-text" style="text-align: center; max-width: 900px; margin: 0 auto; font-size: 1.1rem;">
@@ -133,5 +145,3 @@
 </footer>
 </body>
 </html>
-
-
