--- a/about.html
+++ b/about.html
@@ -9,52 +9,56 @@
 <body>
 
 <nav class="navbar">
-        <div class="logo">CVIP 2026</div>
+    <div class="logo">
+        <img src="assets/images/nitc.svg" alt="NITC Logo" class="nav-logo-img">
+        CVIP 2026
+    </div>
 
-        <div class="mobile-menu-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+    <div class="mobile-menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 
-<ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    
-    <li>
-        <a href="committee.html" class="dropbtn">Committee</a>
-        <ul class="dropdown-content">
-            <li><a href="committee.html">Organizing Committee</a></li>
-            <li><a href="committee.html#steering">Steering Committee</a></li>
-            <li><a href="advisory.html">Advisory Committee</a></li>
-        </ul>
-    </li>
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        
+        <li>
+            <a href="committee.html" class="dropbtn">Committee</a>
+            <ul class="dropdown-content">
+                <li><a href="committee.html">Organizing Committee</a></li>
+                <li><a href="committee.html#steering">Steering Committee</a></li>
+                <li><a href="advisory.html">International Advisory Committee</a></li>
+                <li><a href="national-advisory.html">National Advisory Committee</a></li>
+            </ul>
+        </li>
 
-    <li>
-        <a href="cfp.html" class="dropbtn">Call for Papers</a>
-        <ul class="dropdown-content">
-            <li><a href="cfp.html">Topics & Tracks</a></li>
-            <li><a href="author-guidelines.html">Author Guidelines</a></li>
-        </ul>
-    </li>
+        <li>
+            <a href="cfp.html" class="dropbtn">Call for Papers</a>
+            <ul class="dropdown-content">
+                <li><a href="cfp.html">Topics & Tracks</a></li>
+                <li><a href="author-guidelines.html">Author Guidelines</a></li>
+            </ul>
+        </li>
 
-    <li><a href="sponsorship.html">Sponsorship</a></li>
+        <li><a href="sponsorship.html">Sponsorship</a></li>
 
-    <li><a href="venue.html">Venue</a></li>
-    <li><a href="important-dates.html">Dates</a></li>
-    <li><a href="registration.html">Registration</a></li>
+        <li><a href="venue.html">Venue</a></li>
+        <li><a href="important-dates.html">Dates</a></li>
+        <li><a href="registration.html">Registration</a></li>
 
-    <li>
-        <a href="#" class="dropbtn">Archive</a>
-        <ul class="dropdown-content">
-            <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
-            <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
-            <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
-            <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
-            <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
-        </ul>   
-    </li>
-</ul>
+        <li>
+            <a href="#" class="dropbtn">Archive</a>
+            <ul class="dropdown-content">
+                <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+                <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+                <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+                <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+                <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+            </ul>   
+        </li>
+    </ul>
 </nav>
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens on 26 January 2026! &nbsp;&bull;&nbsp; 📅 Conference Dates: Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 <div class="page-hero"><h1>About the Conference</h1></div>
