--- a/important-dates.html
+++ b/important-dates.html
@@ -9,7 +9,10 @@
 <body>
 
 <nav class="navbar">
-    <div class="logo">CVIP 2026</div>
+    <div class="logo">
+        <img src="assets/images/nitc.svg" alt="NITC Logo" class="nav-logo-img">
+        CVIP 2026
+    </div>
 
     <div class="mobile-menu-toggle">
         <span></span>
@@ -26,7 +29,8 @@
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="committee.html#steering">Steering Committee</a></li>
-                <li><a href="advisory.html">Advisory Committee</a></li>
+                <li><a href="advisory.html">International Advisory Committee</a></li>
+                <li><a href="national-advisory.html">National Advisory Committee</a></li>
             </ul>
         </li>
 
@@ -41,7 +45,7 @@
         <li><a href="sponsorship.html">Sponsorship</a></li>
 
         <li><a href="venue.html">Venue</a></li>
-        <li><a href="important-dates.html" class="active">Dates</a></li>
+        <li><a href="important-dates.html">Dates</a></li>
         <li><a href="registration.html">Registration</a></li>
 
         <li>
