--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         
         <li>
@@ -30,7 +30,8 @@
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="committee.html#steering">Steering Committee</a></li>
-                <li><a href="advisory.html">Advisory Committee</a></li>
+                <li><a href="advisory.html">International Advisory Committee</a></li>
+                <li><a href="national-advisory.html">National Advisory Committee</a></li>
             </ul>
         </li>
 
@@ -145,3 +146,4 @@
 </footer>
 </body>
 </html>
+
