--- a/sponsorship.html
+++ b/sponsorship.html
@@ -161,7 +161,7 @@
     </div>
     
     <div class="reveal-text" style="text-align: center; margin-top: 40px;">
-        <p style="margin-bottom: 20px;">CVIP 2026 attracts decision-makers looking for the next generation of products, solutions, and advanced industry perspectives. Put yourself in the position to meet them by supporting CVIP 2026!</p>
+        <p style="margin-bottom: 20px;">CVIP 2026 attracts decision-makers looking for the next generation of products, solutions, and advanced industry perspectives. Put yourself in the position to meet them by supporting CVIP 2026!  Send an email now to cvip2026@nitc.ac.in</p>
         <a href="mailto:cvip2026@nitc.ac.in" class="btn">Secure Your Sponsorship Today</a>
     </div>
 </section>
