--- a/cfp.html
+++ b/cfp.html
@@ -133,6 +133,13 @@
         </p>
     </div>
 </section>
-<footer>© 2026 CVIP Conference.</footer>
+<footer>
+    <div class="footer-grid">
+        <div class="footer-col"><h4>CVIP 2026</h4><p>NIT Calicut & NTNU Norway</p><p>Dec 9–12, 2026</p></div>
+        <div class="footer-col"><h4>Links</h4><ul style="list-style:none;"><li><a href="cfp.html">Call for Papers</a></li><li><a href="registration.html">Registration</a></li><li><a href="venue.html">Venue</a></li></ul></div>
+        <div class="footer-col"><h4>Contact</h4><p>Email: cvip2026@nitc.ac.in</p></div>
+    </div>
+    <div style="text-align:center; margin-top:40px; padding-top:20px; border-top:1px solid #333;">&copy; 2026 CVIP Conference.</div>
+</footer>
 </body>
 </html>
