--- a/steering-committee.html
+++ b/steering-committee.html
@@ -63,25 +63,43 @@
 
 <section class="section">
     <div class="about-container">
-        
         <div class="committee-group">
             <h3 class="group-title">Steering Committee</h3>
             <div class="member-grid">
                 <div class="member-card">
-                    <div class="member-name">Prof. B. N. Chatterji</div>
-                    <div class="member-affil">IIT Kharagpur, India</div>
+                    <div class="member-name">Prof. Umapada Pal</div>
+                    <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India</div>
                 </div>
                 <div class="member-card">
-                    <div class="member-name">Prof. S. K. Gupta</div>
-                    <div class="member-affil">IIT Delhi, India</div>
+                    <div class="member-name">Prof. R. Balasubramanian</div>
+                    <div class="member-affil">Indian Institute of Technology (IIT) Roorkee, India</div>
                 </div>
                 <div class="member-card">
-                    <div class="member-name">Prof. S. N. Singh</div>
-                    <div class="member-affil">IIT Kanpur, India</div>
+                    <div class="member-name">Prof. Ananda Chowdhury</div>
+                    <div class="member-affil">Jadavpur University, India</div>
                 </div>
+                <div class="member-card">
+                    <div class="member-name">Prof. Deepak Mishra</div>
+                    <div class="member-affil">Indian Institute of Space Science and Technology (IIST), Thiruvananthapuram, India</div>
                 </div>
+                <div class="member-card">
+                    <div class="member-name">Prof. Pritee Khanna</div>
+                    <div class="member-affil">IIITDM Jabalpur, India</div>
+                </div>
+                <div class="member-card">
+                    <div class="member-name">Dr. Subrahmanyam Murala</div>
+                    <div class="member-affil">Trinity College Dublin, Ireland</div>
+                </div>
+                <div class="member-card">
+                    <div class="member-name">Dr. Puneet Goyal</div>
+                    <div class="member-affil">Indian Institute of Technology (IIT) Ropar, India</div>
+                </div>
+                <div class="member-card">
+                    <div class="member-name">Prof. Sanjeev Kumar</div>
+                    <div class="member-affil">Indian Institute of Technology (IIT) Roorkee, India</div>
+                </div>
+            </div>
         </div>
-
     </div>
 </section>
 
