--- a/steering-committee.html
+++ b/steering-committee.html
@@ -26,7 +26,8 @@
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
-                <li><a href="advisory.html">Advisory Committee</a></li>
+                <li><a href="advisory.html#international">International Advisory Committee</a></li>
+                <li><a href="advisory.html#national">National Advisory Committee</a></li>
             </ul>
         </li>
 
