--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <div class="slide" style="background-image: url('assets/images/slide3.jpg');"></div>
     
     <div class="hero-content">
-        <h2>11<sup>th</sup> International Conference on</h2>
+        <h1>11<sup>th</sup> International Conference on</h1>
         <h1>Computer Vision & Image Processing</h1>
         
         <p style="font-size: 1.2rem; margin: 15px 0;">December 9–12, 2026</p>
         <p style="font-size: 1.1rem; margin-bottom: 25px; color: #ffeb3b; font-weight: 500;">
-            Hosted by: NIT Calicut, India<br>
+            NIT Calicut, India<br>
             Jointly Organized by: NIT Calicut & NTNU Norway
         </p>
         <a href="cfp.html" class="btn">Call for Papers</a>
@@ -146,4 +146,5 @@
 </footer>
 </body>
 </html>
+
 
