--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
 <nav class="navbar">
-    <div class="logo">
-        <img src="assets/images/nitc.svg" alt="NITC Logo" class="nav-logo-img">
-        CVIP 2026
+    <div class="logo-container">
+        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo">
+        <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
+        <div class="logo-text">CVIP 2026</div>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -29,9 +30,9 @@
             <a href="committee.html" class="dropbtn">Committee</a>
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
-                <li><a href="committee.html#steering">Steering Committee</a></li>
-                <li><a href="advisory.html">International Advisory Committee</a></li>
-                <li><a href="national-advisory.html">National Advisory Committee</a></li>
+                <li><a href="steering-committee.html">Steering Committee</a></li>
+                <li><a href="advisory.html#international">International Advisory Committee</a></li>
+                <li><a href="advisory.html#national">National Advisory Committee</a></li>
             </ul>
         </li>
 
@@ -146,6 +147,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
