--- a/committee.html
+++ b/committee.html
@@ -9,7 +9,12 @@
 <body>
 
 <nav class="navbar">
-    <div class="logo">CVIP 2026</div>
+    <div class="logo-container">
+        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo">
+        <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
+        
+        <a href="index.html" class="logo-text">CVIP 2026</a>
+    </div>
 
     <div class="mobile-menu-toggle">
         <span></span>
@@ -22,7 +27,7 @@
         <li><a href="about.html">About</a></li>
         
         <li>
-            <a href="committee.html" class="active dropbtn">Committee</a>
+            <a href="committee.html" class="dropbtn">Committee</a>
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
@@ -248,3 +253,4 @@
 </footer>
 </body>
 </html>
+
