--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <nav class="navbar">
     <div class="logo-container">
-        <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
+        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
-        <div class="logo-text">CVIP 2026</div>
+        
+        <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -147,6 +148,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
