--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
     <div class="reveal-text" style="text-align: center; max-width: 900px; margin: 0 auto; font-size: 1.1rem;">
         <p>The <strong>11<sup>th</sup> International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners.</p>
         <br>
-        <p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed).</p>
+        <p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed)<sup>*</sup>.</p>
+        
+        <p class="disclaimer-text">* Subject to approval.</p>
     </div>
 </section>
 
@@ -148,6 +150,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
