--- a/cfp.html
+++ b/cfp.html
@@ -66,9 +66,11 @@
 
 <section class="section">
     <h2 class="section-title reveal-text">Topics of Interest</h2>
-    <p style="text-align:center; max-width:800px; margin:0 auto 20px;" class="reveal-text">
-        CVIP 2026 invites original research contributions. Proceedings will be published in <strong>Springer LNCS</strong>.
+    <p style="text-align:center; max-width:800px; margin:0 auto 10px;" class="reveal-text">
+        CVIP 2026 invites original research contributions. Proceedings will be published in <strong>Springer LNCS</strong><sup>*</sup>.
     </p>
+    
+    <p class="disclaimer-text reveal-text" style="text-align:center; margin-bottom: 25px;">* Subject to approval.</p>
 
     <p style="text-align:center; max-width:900px; margin:0 auto 30px; font-weight:500;" class="reveal-text">
         Topics of interest cover all aspects of computer vision and image processing including, but not limited to:
