--- a/author-guidelines.html
+++ b/author-guidelines.html
@@ -93,9 +93,12 @@
 <section class="section" style="background: #f8f9fa;">
     <h2 class="section-title reveal-text">Proceedings</h2>
     <div class="reveal-text" style="max-width: 900px; margin: 0 auto; text-align: justify; font-size: 1.05rem; color: #444;">
-        <p style="margin-bottom: 20px;">
-            The proceedings of the conference will be published by <strong>Scopus Indexed – Springer</strong> in <em>Communications in Computer and Information Science (CCIS) / Lecture Notes in Computer Science (LNCS)</em> series. 
+        <p style="margin-bottom: 10px;">
+            The proceedings of the conference will be published by <strong>Scopus Indexed – Springer</strong> in <em>Communications in Computer and Information Science (CCIS) / Lecture Notes in Computer Science (LNCS)</em> series<sup>*</sup>.
         </p>
+        
+        <p class="disclaimer-text" style="margin-bottom: 20px;">* Subject to approval.</p>
+
         <p>
             The series is abstracted/indexed in DBLP, Google Scholar, EI-Compendex, Mathematical Reviews, SCImago, and Scopus. Volumes are also generally submitted for inclusion in ISI Proceedings.
         </p>
