--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <tbody>
                 <tr><td><strong>Conference Dates</strong></td><td style="color: var(--secondary-color); font-weight: 700;">December 9–12, 2026</td></tr>
                 
-                <tr><td>Round 1 Paper Submission Opens</td><td>26 January 2026</td></tr>
-                <tr><td>Round 1 Paper Submission Deadline</td><td>15 April 2026</td></tr>
-                <tr><td>Round 1 Acceptance Notification</td><td>15 June 2026</td></tr>
-                <tr><td>Round 1 Camera Ready Submission</td><td>15 July 2026</td></tr>
+                <tr><td>Paper Submission Opens (Round 1)</td><td>26 January 2026</td></tr>
+                <tr><td>Paper Submission Deadline (Round 1)</td><td>15 April 2026</td></tr>
+                <tr><td>Acceptance Notification (Round 1)</td><td>15 June 2026</td></tr>
+                <tr><td>Camera Ready Submission (Round 1)</td><td>15 July 2026</td></tr>
 
-                <tr><td>Round 2 Paper Submission Deadline</td><td>31 July 2026</td></tr>
-                <tr><td>Round 2 Acceptance Notification</td><td>31 September 2026</td></tr>
-                <tr><td>Round 2 Camera Ready Submission</td><td>23 October 2026</td></tr>
+                <tr><td>Paper Submission Deadline (Round 2)</td><td>31 July 2026</td></tr>
+                <tr><td>Acceptance Notification (Round 2)</td><td>31 September 2026</td></tr>
+                <tr><td>Camera Ready Submission (Round 2)</td><td>23 October 2026</td></tr>
 
                 <tr><td>Registration Deadline</td><td>To be notified soon</td></tr>
             </tbody>
@@ -171,6 +171,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
