--- a/important-dates.html
+++ b/important-dates.html
@@ -83,33 +83,33 @@
                 </tr>
                 
                 <tr>
-                    <td>Round 1 Paper Submission Opens</td>
+                    <td>Paper Submission Opens (Round 1)</td>
                     <td>26 January 2026</td>
                 </tr>
                  <tr>
-                    <td>Round 1 Paper Submission Deadline</td>
+                    <td>Paper Submission Deadline (Round 1)</td>
                     <td>15 April 2026</td>
                 </tr>
                 <tr>
-                    <td>Round 1 Acceptance Notification</td>
+                    <td>Acceptance Notification (Round 1)</td>
                     <td>15 June 2026</td>
                 </tr>
                 <tr>
-                    <td>Round 1 Camera Ready Submission</td>
+                    <td>Camera Ready Submission (Round 1)</td>
                     <td>15 July 2026</td>
                 </tr>
 
 
                  <tr>
-                    <td>Round 2 Paper Submission Deadline</td>
+                    <td>Paper Submission Deadline (Round 2)</td>
                     <td>31 July 2026</td>
                 </tr>
                 <tr>
-                    <td>Round 2 Acceptance Notification</td>
+                    <td>Acceptance Notification (Round 2)</td>
                     <td>31 September 2026</td>
                 </tr>
                 <tr>
-                    <td>Round 2 Camera Ready Submission</td>
+                    <td>Camera Ready Submission (Round 2)</td>
                     <td>23 October 2026</td>
                 </tr>
 
