--- a/cfp.html
+++ b/cfp.html
@@ -124,9 +124,9 @@
 </section>
 
 <section class="section">
-    <h2 class="section-title reveal-text">Tracks</h2>
+    <h2 class="section-title reveal-text">Conference Tracks</h2>
     <div class="reveal-text" style="max-width: 900px; margin: 0 auto; text-align: center; color: #555;">
-        <p><em>(Please retain your existing Conference Tracks content here)</em></p>
+        <p><em>(Please insert your existing Conference Tracks here)</em></p>
     </div>
 </section>
 
