--- a/cfp.html
+++ b/cfp.html
@@ -75,20 +75,20 @@
     <div class="reveal-text" style="max-width: 1000px; margin: 40px auto;">
         <div class="topics-list-container">
             <ul style="list-style-type: disc; padding-left: 20px; color: #444; line-height: 1.8;">
-                <li>Adversarial Learning: Attacks, Defenses, and Robust AI</li>
-                <li>Computational Imaging</li>
-                <li>Computational Photography</li>
-                <li>Datasets and Evaluation</li>
-                <li>Document and Synthetic Visual Processing</li>
-                <li>Forensics, Content Protection</li>
-                <li>Human Computer Interaction</li>
-                <li>Image and Video Processing</li>
-                <li>Image/ Video Security and Quality Assessment</li>
-                <li>Quantum Computer Vision</li>
-                <li>Responsible AI Ethics and Privacy in Computer Vision</li>
-                <li>Vision based Human Gait Analysis</li>
-                <li>Visual Sensor Hardware</li>
-                <li>3D Reconstruction, Modeling, and Visualization Techniques</li>
+                <li>Adversarial Learning: Attacks, Defenses, and Robust AI [cite: 186]</li>
+                <li>Computational Imaging [cite: 187]</li>
+                <li>Computational Photography [cite: 188]</li>
+                <li>Datasets and Evaluation [cite: 189]</li>
+                <li>Document and Synthetic Visual Processing [cite: 190]</li>
+                <li>Forensics, Content Protection [cite: 191]</li>
+                <li>Human Computer Interaction [cite: 192]</li>
+                <li>Image and Video Processing [cite: 193]</li>
+                <li>Image/ Video Security and Quality Assessment [cite: 194]</li>
+                <li>Quantum Computer Vision [cite: 195]</li>
+                <li>Responsible AI Ethics and Privacy in Computer Vision [cite: 196]</li>
+                <li>Vision based Human Gait Analysis [cite: 197]</li>
+                <li>Visual Sensor Hardware [cite: 198]</li>
+                <li>3D Reconstruction, Modeling, and Visualization Techniques [cite: 199]</li>
             </ul>
         </div>
     </div>
@@ -99,25 +99,25 @@
     <div class="reveal-text" style="max-width: 1000px; margin: 0 auto;">
         <div class="topics-list-container">
             <ul style="list-style-type: disc; padding-left: 20px; color: #444; line-height: 1.8;">
-                <li>Aerial and UAV-based Computer Vision</li>
-                <li>Aquatic Frontiers</li>
-                <li>Art and Games in the Social Media Era</li>
-                <li>Autonomous Robotic Systems</li>
-                <li>Biometrics and Sign Language Recognition</li>
-                <li>Explainable and Secure AI for Vision</li>
-                <li>From Cognition to Decision-Making</li>
-                <li>Generative Approaches to Visual Understanding</li>
-                <li>Graphics and Visual Computing</li>
-                <li>Hardware Architectures for CV</li>
-                <li>Immersive Experiences through VR/ AR</li>
-                <li>Monitoring Ecosystems through Remote Sensing</li>
-                <li>Pedagogical Practices and Learning</li>
-                <li>Perception, Decision, and Control in ADAS</li>
-                <li>Resilient Healthcare</li>
-                <li>Structural Health Monitoring and Transportation Engineering</li>
-                <li>Sustainability in Agriculture</li>
-                <li>Vision in Urban Planning</li>
-                <li>Vision Systems for Edge Computing and IoT</li>
+                <li>Aerial and UAV-based Computer Vision [cite: 166]</li>
+                <li>Aquatic Frontiers [cite: 167]</li>
+                <li>Art and Games in the Social Media Era [cite: 168]</li>
+                <li>Autonomous Robotic Systems [cite: 169]</li>
+                <li>Biometrics and Sign Language Recognition [cite: 170]</li>
+                <li>Explainable and Secure AI for Vision [cite: 171]</li>
+                <li>From Cognition to Decision-Making [cite: 172]</li>
+                <li>Generative Approaches to Visual Understanding [cite: 173]</li>
+                <li>Graphics and Visual Computing [cite: 174]</li>
+                <li>Hardware Architectures for CV [cite: 175]</li>
+                <li>Immersive Experiences through VR/ AR [cite: 176]</li>
+                <li>Monitoring Ecosystems through Remote Sensing [cite: 177]</li>
+                <li>Pedagogical Practices and Learning [cite: 178]</li>
+                <li>Perception, Decision, and Control in ADAS [cite: 179]</li>
+                <li>Resilient Healthcare [cite: 180]</li>
+                <li>Structural Health Monitoring and Transportation Engineering [cite: 181]</li>
+                <li>Sustainability in Agriculture [cite: 182]</li>
+                <li>Vision in Urban Planning [cite: 183]</li>
+                <li>Vision Systems for Edge Computing and IoT [cite: 184]</li>
             </ul>
         </div>
     </div>
@@ -125,8 +125,29 @@
 
 <section class="section">
     <h2 class="section-title reveal-text">Conference Tracks</h2>
-    <div class="reveal-text" style="max-width: 900px; margin: 0 auto; text-align: center; color: #555;">
-        <p><em>(Please insert your existing Conference Tracks here)</em></p>
+    <div style="max-width: 1000px; margin: 0 auto;">
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; margin-top: 40px;">
+            <div class="reveal-text">
+                <div class="group-title">Technical Tracks</div>
+                <ul style="list-style: none; line-height: 2.2; padding-left: 10px;">
+                    <li>✅ AI / Machine Learning for CV & IP</li>
+                    <li>✅ Computational Imaging and Emerging Technologies</li>
+                    <li>✅ Computer Vision / Pattern Recognition</li>
+                    <li>✅ Image / Video Processing</li>
+                    <li>✅ Image Biometrics / Forensics</li>
+                    <li>✅ Medical / Remote Sensing Applications</li>
+                </ul>
+            </div>
+            <div class="reveal-text">
+                <div class="group-title">Workshop Themes</div>
+                <ul style="list-style: none; line-height: 2.2; padding-left: 10px;">
+                    <li>🔹 Vision for Healthcare and Medical Informatics</li>
+                    <li>🔹 Vision in Agriculture</li>
+                    <li>🔹 Vision in Smart Cities and Urban Planning</li>
+                    <li>🔹 Hardware and Architectures for Vision</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 
