--- a/cfp.html
+++ b/cfp.html
@@ -10,8 +10,9 @@
 
 <nav class="navbar">
     <div class="logo-container">
-        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo logo-white">
-        <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo logo-white">
+        <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
+        <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
+        
         <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
 
