--- a/steering-committee.html
+++ b/steering-committee.html
@@ -12,7 +12,6 @@
     <div class="logo-container">
         <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo logo-white">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo logo-white">
-        
         <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
 
@@ -82,7 +81,7 @@
                 </div>
 
                 <div class="member-card">
-                    <img src="assets/images/r.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
+                    <img src="assets/images/balasubramanian.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
                     <div class="member-info">
                         <a href="#" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
                         <div class="member-affil">Indian Institute of Technology (IIT) Roorkee, India</div>
