--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar">
     <div class="logo-container">
-        <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
+        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
         
         <a href="index.html" class="logo-text">CVIP 2026</a>
@@ -32,8 +32,8 @@
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
-                <li><a href="advisory.html#international">International Advisory Committee</a></li>
-                <li><a href="advisory.html#national">National Advisory Committee</a></li>
+                <li><a href="advisory.html">International Advisory Committee</a></li>
+                <li><a href="national-advisory.html">National Advisory Committee</a></li>
             </ul>
         </li>
 
@@ -171,6 +171,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
