--- a/faq.html
+++ b/faq.html
@@ -76,4 +76,30 @@
     <div class="about-container" style="max-width: 900px;">
         
         <div class="faq-item">
-            <div class="faq-question">Where will the papers in CVIP 2026 be
+            <div class="faq-question">Where will the papers in CVIP 2026 be indexed?</div>
+            <div class="faq-answer">
+                The series is abstracted/indexed in DBLP, Google Scholar, EI-Compendex, Mathematical Reviews, SCImago, and Scopus. Volumes are also generally submitted for inclusion in ISI Proceedings.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">How do I submit my paper?</div>
+            <div class="faq-answer">
+                Please visit the <a href="cfp.html">Call for Papers</a> page for submission links and the <a href="author-guidelines.html">Author Guidelines</a> page for formatting instructions.
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<footer>
+    <div class="footer-grid">
+        <div class="footer-col"><h4>CVIP 2026</h4><p>NIT Calicut & NTNU Norway</p><p>Dec 9–12, 2026</p></div>
+        <div class="footer-col"><h4>Links</h4><ul style="list-style:none;"><li><a href="cfp.html">Call for Papers</a></li><li><a href="registration.html">Registration</a></li><li><a href="venue.html">Venue</a></li></ul></div>
+        <div class="footer-col"><h4>Contact</h4><p>Email: cvip2026@nitc.ac.in</p></div>
+    </div>
+    <div style="text-align:center; margin-top: 30px; font-size: 0.85rem; color: #aaa; font-style: italic;">* Proceedings publication in Springer LNCS is subject to approval.</div>
+    <div style="text-align:center; margin-top:20px; padding-top:20px; border-top:1px solid #333;">&copy; 2026 CVIP Conference.</div>
+</footer>
+</body>
+</html>
