--- a/sponsors.html
+++ b/sponsors.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar">
     <div class="logo-container">
-        <img src="assets/images/nitc.png" alt="NITC" class="nav-logo">
+        <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
         <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
