--- a/author-guidelines.html
+++ b/author-guidelines.html
@@ -94,7 +94,7 @@
     <h2 class="section-title reveal-text">Proceedings</h2>
     <div class="reveal-text" style="max-width: 900px; margin: 0 auto; text-align: justify; font-size: 1.05rem; color: #444;">
         <p style="margin-bottom: 10px;">
-            The proceedings of the conference will be published by <strong>Scopus Indexed – Springer</strong> in <em>Communications in Computer and Information Science (CCIS) / Lecture Notes in Computer Science (LNCS)</em> series<sup>*</sup>.
+            The proceedings of the conference will be published by <strong>Scopus Indexed – Springer</strong> in <em>Lecture Notes in Computer Science (LNCS)</em> series<sup>*</sup>.
         </p>
         
         
