--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <div class="logo-container">
         <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
-        
         <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
 
@@ -23,7 +22,7 @@
     </div>
 
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html"  class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         
         <li>
@@ -31,8 +30,8 @@
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
-                <li><a href="advisory.html#international">International Advisory Committee</a></li>
-                <li><a href="advisory.html#national">National Advisory Committee</a></li>
+                <li><a href="advisory.html">International Advisory Committee</a></li>
+                <li><a href="national-advisory.html">National Advisory Committee</a></li>
             </ul>
         </li>
 
@@ -41,10 +40,11 @@
             <ul class="dropdown-content">
                 <li><a href="cfp.html">Topics & Tracks</a></li>
                 <li><a href="author-guidelines.html">Author Guidelines</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </li>
 
-        <li><a href="sponsorship.html">Sponsorship</a></li>
+        <li><a href="sponsors.html">Sponsors</a></li>
 
         <li><a href="venue.html">Venue</a></li>
         <li><a href="important-dates.html">Dates</a></li>
