--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
     </div>
 
     <ul class="nav-links">
-        <li><a href="index.html"  class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html"  class="active">About</a></li>
         
         <li>
             <a href="committee.html" class="dropbtn">Committee</a>
