--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="logo-container">
         <img src="assets/images/nitc.svg" alt="NITC" class="nav-logo">
         <img src="assets/images/ntnu.svg" alt="NTNU" class="nav-logo">
-        
         <a href="index.html" class="logo-text">CVIP 2026</a>
     </div>
 
@@ -25,7 +24,7 @@
 
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html"  class="active">About</a></li>
         
         <li>
             <a href="committee.html" class="dropbtn">Committee</a>
@@ -42,10 +41,11 @@
             <ul class="dropdown-content">
                 <li><a href="cfp.html">Topics & Tracks</a></li>
                 <li><a href="author-guidelines.html">Author Guidelines</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </li>
 
-        <li><a href="sponsorship.html">Sponsorship</a></li>
+        <li><a href="sponsors.html">Sponsors</a></li>
 
         <li><a href="venue.html">Venue</a></li>
         <li><a href="important-dates.html">Dates</a></li>
@@ -171,6 +171,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
