--- a/author-guidelines.html
+++ b/author-guidelines.html
@@ -36,7 +36,7 @@
         </li>
 
         <li>
-            <a href="cfp.html" class="dropbtn">Call for Papers</a>
+            <a href="cfp.html" class="dropbtn active">Call for Papers</a>
             <ul class="dropdown-content">
                 <li><a href="cfp.html">Topics & Tracks</a></li>
                 <li><a href="author-guidelines.html">Author Guidelines</a></li>
