--- a/important-dates.html
+++ b/important-dates.html
@@ -23,7 +23,7 @@
 
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"  class="active">About</a></li>
+        <li><a href="about.html">About</a></li>
         
         <li>
             <a href="committee.html" class="dropbtn">Committee</a>
@@ -47,7 +47,7 @@
         <li><a href="sponsors.html">Sponsors</a></li>
 
         <li><a href="venue.html">Venue</a></li>
-        <li><a href="important-dates.html">Dates</a></li>
+        <li><a href="important-dates.html">Dates  class="active"</a></li>
         <li><a href="registration.html">Registration</a></li>
 
         <li>
