--- a/steering-committee.html
+++ b/steering-committee.html
@@ -23,10 +23,10 @@
 
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"  class="active">About</a></li>
+        <li><a href="about.html">About</a></li>
         
         <li>
-            <a href="committee.html" class="dropbtn">Committee</a>
+            <a href="committee.html" class="dropbtn active">Committee</a>
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
