--- a/cfp.html
+++ b/cfp.html
@@ -26,7 +26,7 @@
         <li><a href="about.html"  class="active">About</a></li>
         
         <li>
-            <a href="committee.html" class="dropbtn">Committee</a>
+            <a href="committee.html">Committee</a>
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="steering-committee.html">Steering Committee</a></li>
