--- a/faq.html
+++ b/faq.html
@@ -85,7 +85,7 @@
         <div class="faq-item">
             <div class="faq-question">How do I submit my paper?</div>
             <div class="faq-answer">
-                Please visit the <a href="cfp.html">Call for Papers</a> page for submission links and the <a href="author-guidelines.html">Author Guidelines</a> page for formatting instructions.
+                Please visit the <a href="cfp.html">Call for Papers</a> page for topics of interest and the <a href="author-guidelines.html">Author Guidelines</a> page for formatting and submission instructions.
             </div>
         </div>
 
