--- a/important-dates.html
+++ b/important-dates.html
@@ -47,7 +47,7 @@
         <li><a href="sponsors.html">Sponsors</a></li>
 
         <li><a href="venue.html">Venue</a></li>
-        <li><a href="important-dates.html">Dates  class="active"</a></li>
+        <li><a href="important-dates.html" class="active">Dates</a></li>
         <li><a href="registration.html">Registration</a></li>
 
         <li>
