--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         <div class="footer-col">
             <h4>Contact</h4>
-            <p>Email: cvip2026@nitc.ac.in</p>
+            <p>Email: cvip_2026@nitc.ac.in</p>
         </div>
     </div>
     
@@ -171,6 +171,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
