--- a/cfp.html
+++ b/cfp.html
@@ -165,7 +165,7 @@
         </div>
         <div class="footer-col">
             <h4>Contact</h4>
-            <p>Email: cvip2026@nitc.ac.in</p>
+            <p>Email: cvip_2026@nitc.ac.in</p>
         </div>
     </div>
     
